--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -22,6 +22,10 @@
   background-color: rgba(0, 0, 0, 0.7);
 }
 
+.bg-yellow {
+  background-color: #fff8c7;
+}
+
 .bg-white {
   background-color: white;
 }
@@ -34,8 +38,24 @@
   color: white;
 }
 
+.color-violet {
+  color: #7811ff;
+}
+
 .ml-10px {
   margin-left: 10px;
+}
+
+.mr-30px {
+  margin-right: 30px;
+}
+
+.mr-20 {
+  margin-right: 20px;
+}
+
+.mt-20 {
+  margin-top: 20px;
 }
 
 .flex {
@@ -139,6 +159,11 @@
 .my-2px {
   margin-top: 2px;
   margin-bottom: 2px;
+}
+
+.px-15px {
+  padding-right: 15px;
+  padding-left: 15px;
 }
 
 .py-5px {
@@ -278,12 +303,16 @@ section {
   height: 100vh;
 }
 
+.h-150px {
+  height: 150px;
+}
+
 .h-200px {
   height: 200px;
 }
 
-.h-900px {
-  height: 800px;
+.h-650px {
+  height: 650px;
 }
 
 .t0 {
@@ -302,7 +331,7 @@ section {
   margin-bottom: 20px;
 }
 
-.wmin200px {
+.wmin300px {
   min-width: 300px;
 }
 
@@ -474,5 +503,12 @@ section {
 .sended-info {
   font-style: italic;
   color: #dec5ff;
+}
+
+@media only screen and (max-width: 1200px) {
+  .main-content-container {
+    min-width: unset;
+    padding-left: 30px;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
