--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -26,6 +26,9 @@ $rose: #ffc7c7;
 .bg-black-transparent {
   background-color: rgba(0, 0, 0, 0.7);
 }
+.bg-yellow {
+  background-color: $yellow;
+}
 .bg-white {
   background-color: white;
 }
@@ -35,8 +38,20 @@ $rose: #ffc7c7;
 .color-white {
   color: white;
 }
+.color-violet {
+  color: $violet;
+}
 .ml-10px {
   margin-left: 10px;
+}
+.mr-30px {
+  margin-right: 30px;
+}
+.mr-20 {
+  margin-right: 20px;
+}
+.mt-20 {
+  margin-top: 20px;
 }
 .flex {
   display: flex;
@@ -103,6 +118,10 @@ $rose: #ffc7c7;
 .my-2px {
   margin-top: 2px;
   margin-bottom: 2px;
+}
+.px-15px {
+  padding-right: 15px;
+  padding-left: 15px;
 }
 .py-5px {
   padding-top: 5px;
@@ -210,11 +229,14 @@ section {
 .h100vh {
   height: 100vh;
 }
+.h-150px {
+  height: 150px;
+}
 .h-200px {
   height: 200px;
 }
-.h-900px {
-  height: 800px;
+.h-650px {
+  height: 650px;
 }
 .t0 {
   top: 0;
@@ -228,7 +250,7 @@ section {
 .mb-20px {
   margin-bottom: 20px;
 }
-.wmin200px {
+.wmin300px {
   min-width: 300px;
 }
 .wmax-250px {
@@ -367,4 +389,10 @@ section {
 .sended-info {
   font-style: italic;
   color: $lightViolet;
+}
+@media only screen and (max-width: 1200px) {
+  .main-content-container {
+    min-width: unset;
+    padding-left: 30px;
+  }
 }
