--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -20,7 +20,7 @@ $rose: #ffc7c7;
 .bg-color-dark-gray {
   background-color: $gray;
 }
-.bg-color-light-green {
+.bg-light-green {
   background-color: $lightGreen;
 }
 .bg-black-transparent {
